--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,19 +3,20 @@
 
 <!-- body -->
 <div>
-    <div class="landing-search-field">
-        <div class="wrap">
-            <div class="search">
-               <input type="text" class="searchTerm" placeholder="What are you looking for?">
-               <button type="submit" class="searchButton">
-                 <i class="fa fa-search"></i>
-              </button>
-            </div>
-         </div>
-    </div>
-    <div class="landing-display">
+  <div class="landing-search-field">
+    <div class="wrap">
+      <div class="search">
+        <input type="text" class="searchTerm" placeholder="What are you looking for?">
+          <button mat-button type="submit" class="searchButton" (click)="getRecipies()">
+            <i class="fa fa-search"></i>
+          </button>
+        </div>
+      </div>
+  </div>
 
-    </div>
+  <div class="landing-display">
+
+  </div>
 </div>
 
 <!-- footer -->
