--- a/client/src/app/shared/components/header/header.component.html
+++ b/client/src/app/shared/components/header/header.component.html
@@ -1,13 +1,14 @@
+<!-- header.component.html -->
 <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>Recipe Realm</span>
-    <span class="navbar-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-      <mat-icon>share</mat-icon>
-    </button>
+  <a mat-button class="app-title" routerLink="/recipes">Recipe Realm</a>
+  <a mat-button class="my-favorites-button" routerLink="/favorites">
+    My Favorites
+  </a>
+  <a mat-button class="my-lists-button" routerLink="/lists">
+    My Lists
+  </a>
+  <span class="navbar-spacer"></span>
+  <button mat-icon-button class="profile-icon" aria-label="Profile" (click)="openProfile()">
+    <mat-icon>account_circle</mat-icon>
+  </button>
 </mat-toolbar>
